# local_control

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  setup.cfg
lan_control/: __init__.py  config.py
lan_control/static/js/: app.js
local_control/: __init__.py  app.py  cli.py  control.py
local_control/static/: index.html
local_control/static/css/: styles.css
local_control/static/js/: app.js
local_control/utils/: terminal_qr.py
