[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lan-control"
version = "0.1.1"
description = "LAN-accessible remote control server for mouse, keyboard, and power management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
  {name = "LAN Control Maintainers"}
]
dependencies = [
  "flask>=2.3"
]

[project.urls]
Homepage = "https://example.com/lan-control"

[project.scripts]
lan-control = "lan_control.cli:main"
